<resources>
    <string name="app_name">verdiGo</string>
    <string name="inicia_sesi_n">Inicia Sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="olvidaste_tu_contrasenia"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="ahora">Ahora</string>
    <string name="crea_tu_cuenta">Crea tu cuenta</string>
    <string name="_2025_verdigo_todos_los_derechos_reservados">© 2025 Verdigo. Todos los derechos reservados.</string>
    <string name="desc_app">¡Vive en verde! 🌿</string>
    <string name="desc_app_2">Descubre productos ecológicos, apoya negocios locales y únete al cambio hacia un futuro sostenible. ¡La diferencia comienza contigo! ✨</string>
    <string name="reg_strate">Regístrate</string>
    <string name="nombres_completos">Nombres Completos</string>
    <string name="apellidos_completos">Apellidos Completos</string>
    <string name="correo">Correo Electrónico</string>
    <string name="tel_fono">Teléfono</string>
    <string name="repite_tu_contrase_a">Repite tu Contraseña</string>
    <string name="terminos">Acepto los términos y condiciones</string>
    <string name="inicia_sesion_sub"><u>Inicia Sesión</u></string>
    <string name="recuperar_contrase_a">Recuperar Contraseña</string>
    <string name="recuperar">Recuperar</string>
    <string name="recovery_password_description">Ingresa tu correo electrónico y te enviaremos un enlace para restablecer la contraseña. Sigue las instrucciones en tu correo para crear una nueva contraseña y recuperar el acceso a tu cuenta.</string>
    <string name="categor_as">Categorías</string>
    <string name="productos">Productos</string>
    <string name="home">Home</string>
    <string name="menos_huella">Menos huella,</string>
    <string name="m_s_futuro">más futuro</string>
    <string name="favoritos">Favoritos</string>
    <string name="perfil">Perfil</string>
    <string name="buscar">Buscar</string>
    <string name="buscar_en_favorites">Buscar en favoritos</string>
    <string name="buscar_productos">Buscar productos</string>
    <string name="antojos">¿Antojos?</string>
    <string name="te_puede_interesar">Te puede interesar</string>
    <string name="ver_m_s">Ver más</string>
    <string name="m_s">Más</string>
    <string name="mapas">Mapas</string>
    <string name="ver">Ver</string>
    <string name="tu_perfil">Tu perfil</string>
    <string name="compras">Compras</string>
    <string name="ventas">Ventas</string>
    <string name="rese_as">Reseñas</string>
    <string name="editar"><u>Editar</u></string>
    <string name="actualizar_datos">Actualizar Datos</string>
    <string name="agregar_al_carrito">Agregar al Carrito</string>
    <string name="menos">-</string>
    <string name="mas">+</string>
    <string name="pipe">|</string>
    <string name="txt_inicio">Cada acción cuenta: reduce tu huella de carbono y ayuda a preservar nuestro planeta para las futuras generaciones.</string>
    <string name="explora_nuestras_opciones">Explora nuestras opciones</string>
    <string name="bienvenido">¡Bienvenid@ %1$s :)!</string>
    <string name="hola_de_nuevo"> Hola de nuevo\n%1$s 👋🏼</string>
</resources>