<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:padding="16dp">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <!-- Card for the login form -->
    <androidx.cardview.widget.CardView
        android:id="@+id/loginCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/principal_transparente"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:text="@string/inicia_sesi_n"
                android:textColor="@color/blanco"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Usuario -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo"
                android:textColor="@color/blanco"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/blanco"
                android:textColor="@color/blanco" />

            <!-- Contraseña -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrasenia"
                android:textColor="@color/blanco"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/blanco"
                android:inputType="textPassword"
                android:textColor="@color/blanco" />

            <!-- Entrar Button -->
            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/blanco"
                android:text="@string/ingresar"
                android:textColor="@color/principal"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Olvidaste tu contraseña -->
            <TextView
                android:id="@+id/forgotPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/olvidaste_tu_contrasenia"
                android:textColor="@color/blanco"
                android:textSize="16sp"
                android:textStyle="italic" />

            <!-- Crear cuenta -->
            <Button
                android:id="@+id/btnGoogleLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blanco"
                android:text="Ingresa con google"
                android:textColor="@color/principal"
                android:textSize="24sp"
                app:cornerRadius="15dp"
                app:icon="@drawable/icon_google"
                app:iconSize="35sp"
                app:iconTint="@null"
                android:layout_marginBottom="16dp"
                app:strokeColor="@color/blanco"
                app:strokeWidth="3dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crea_tu_cuenta"
                    android:textColor="@color/blanco"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/signUpButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="@color/blanco"
                    android:text="@string/ahora"
                    android:textColor="@color/principal"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2025_verdigo_todos_los_derechos_reservados"
        android:textColor="@color/blanco"
        android:textSize="12sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>