<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:padding="16dp">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/loginCardView"
        android:layout_marginBottom="20dp"
        android:contentDescription="Logo" />

    <!-- Card for the login form -->
    <androidx.cardview.widget.CardView
        android:id="@+id/loginCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/principal_transparente"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_strate"
                    android:gravity="center"
                    android:textColor="@color/blanco"
                    android:layout_marginBottom="10dp"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <!-- Nombres Completos -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombres_completos"
                    android:textColor="@color/blanco"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNames"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="18sp"
                    android:backgroundTint="@color/blanco"
                    android:textColor="@color/blanco" />

                <!-- Apellidos Completos -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apellidos_completos"
                    android:textColor="@color/blanco"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextLastNames"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="18sp"
                    android:backgroundTint="@color/blanco"
                    android:textColor="@color/blanco" />

                <!-- Correo Electrónico -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/correo"
                    android:textColor="@color/blanco"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"
                    android:backgroundTint="@color/blanco"
                    android:textColor="@color/blanco" />

                <!-- Teléfono -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tel_fono"
                    android:textColor="@color/blanco"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <!-- Contraseña -->
                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/blanco"
                    android:inputType="phone"
                    android:textColor="@color/blanco"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contrasenia"
                    android:textColor="@color/blanco"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    android:backgroundTint="@color/blanco"
                    android:textColor="@color/blanco" />

                <!-- Repite tu Contraseña -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repite_tu_contrase_a"
                    android:textColor="@color/blanco"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <!-- Checkbox y Botón de Registro -->
                <EditText
                    android:id="@+id/editTextRepeatPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/blanco"
                    android:inputType="textPassword"
                    android:textColor="@color/blanco"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/checkBoxTyC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:buttonTint="@color/blanco"
                    android:backgroundTint="@color/principal"
                    android:text="@string/terminos"
                    android:textColor="@color/blanco"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/blanco"
                    android:text="@string/crea_tu_cuenta"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:textColor="@color/principal"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/redirectLoginTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/inicia_sesion_sub"
                    android:textColor="@color/blanco"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>