<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tu_perfil"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/txtPrincipal"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:id="@+id/avatarFragment"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/actualizar_datos"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/avatarFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Nombres Completos -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombres_completos"
                android:textColor="@color/grisTxt"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtNombresPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="18sp"
                android:backgroundTint="@color/txtPrincipal"
                android:textColor="@color/negro" />

            <!-- Apellidos Completos -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellidos_completos"
                android:textColor="@color/grisTxt"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtApellidosPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="18sp"
                android:backgroundTint="@color/txtPrincipal"
                android:textColor="@color/negro" />

            <!-- Correo Electrónico -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo"
                android:textColor="@color/grisTxt"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtCorreoPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:backgroundTint="@color/txtPrincipal"
                android:textColor="@color/negro" />

            <!-- Teléfono -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel_fono"
                android:textColor="@color/grisTxt"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtTelefonoPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/txtPrincipal"
                android:inputType="phone"
                android:textColor="@color/negro"
                android:textSize="18sp" />

            <!-- Contraseña -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrasenia"
                android:textColor="@color/grisTxt"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtPasswordPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:backgroundTint="@color/txtPrincipal"
                android:textColor="@color/negro" />

            <!-- Repite tu Contraseña -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repite_tu_contrase_a"
                android:textColor="@color/grisTxt"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtVerPasswordPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/txtPrincipal"
                android:inputType="textPassword"
                android:textColor="@color/negro"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnGuardarDatos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/txtPrincipal"
                android:text="@string/actualizar_datos"
                android:layout_marginBottom="8dp"
                android:textColor="@color/blanco"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>