<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:padding="16dp">


    <!-- Logo con sombra -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="210dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:elevation="8dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    tools:ignore="ContentDescription" />


    <!-- Card para contenido -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="#E6FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Descripción -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/desc_app"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/desc_app_2"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <!-- Botón Iniciar Sesión -->
            <Button
                android:id="@+id/loginButtonHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/principal"
                android:text="@string/inicia_sesi_n"
                android:textSize="18sp"
                android:textColor="@color/blanco" />

            <!-- Botón Registrarse -->
            <Button
                android:id="@+id/signUpButtonHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/principal"
                android:text="@string/crea_tu_cuenta"
                android:textSize="18sp"
                android:textColor="@color/blanco" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>